# myspice

./: .gitignore  CMakeLists.txt  README.md
Project345/: README.md  getsrcv.m  main.m  solve.m  solve_test.m
Project345/Benchmark/: bus32seg16_pulse.ic0  bus32seg16_pulse.lis  bus32seg16_pulse.st0  bus32seg16_pulse.tr0  bus32seg16_sin.ic0  bus32seg16_sin.lis  bus32seg16_sin.sp  bus32seg16_sin.st0  bus32seg16_sin.tr0  bus8bit8seg_pulse.ic0  bus8bit8seg_pulse.lis  bus8bit8seg_pulse.st0  bus8bit8seg_pulse.tr0  bus8bit8seg_sin.ic0  bus8bit8seg_sin.lis  bus8bit8seg_sin.sp  bus8bit8seg_sin.st0  bus8bit8seg_sin.tr0  rlc_s3_pulse.ic0  rlc_s3_pulse.lis  rlc_s3_pulse.st0  rlc_s3_pulse.tr0  rlc_s3_sin.ic0  rlc_s3_sin.lis  rlc_s3_sin.st0  rlc_s3_sin.tr0
Project6/: README.md  run_amp.m  run_inv.m
Project7/: BE.m  README.md  main.m  newton.m
Project7/Benchmark/: RLC_s3.lis  RLC_s3.sp  bus32seg16.sp  bus8bit8seg.lis  bus8bit8seg.sp
benchmark/: RLC_s3.out  Test_0.out  spicets.out  spicets.sp
benchmark/Example/: RLC_s3.txt
include/: myspice.h
matlab/: getsrcv.m  project45.m  rand11.mat  solve.m
matlab/Benchmark/: bus32seg16_ac.lis  bus32seg16_pulse.lis  bus8bit8seg_ac.lis  bus8bit8seg_ac.sp  bus8bit8seg_pulse.lis  rlc_s3_pulse.lis  rlc_s3_pulse.sp  rlc_s3_sin.lis  rlc_s3_sin.sp
src/: CMakeLists.txt  argparse.cpp  capacitor.cpp  device.cpp  devices.cpp  help_message.cpp  inductor.cpp  isrc.cpp  mat.cpp  matrix.cpp  mutual.cpp  myspice.cpp  read_netlist.cpp  resistor.cpp  stamp.cpp  utils.cpp  vsrc.cpp
